@@ -7,15 +7,18 @@ FSAA=0
 Full Screen=Yes
 RTT Preferred Mode=FBO
 VSync=No
+VSync Interval=1
 Video Mode=1024 x 768
 sRGB Gamma Conversion=No
 
 [Direct3D9 Rendering Subsystem]
 Allow NVPerfHUD=No
-Anti aliasing=None
+FSAA=0
 Floating-point mode=Fastest
 Full Screen=No
-Rendering Device=Mobile Intel(R) 965 Express Chipset Family
+Rendering Device=Monitor-1-Mobile Intel(R) 965 Express Chipset Family
+Resource Creation Policy=Create on all devices
 VSync=No
+VSync Interval=1
 Video Mode=800 x 600 @ 32-bit colour
 sRGB Gamma Conversion=No
